--- a/platformio.ini
+++ b/platformio.ini
@@ -13,9 +13,10 @@ platform = https://github.com/pioarduino/platform-espressif32/releases/download/
 board = esp32-c6-devkitm-1
 framework = arduino
 lib_deps = 
-  roboticsbrno/SmartLeds@^3.1.4
+  git@github.com:outlandnish/SmartLeds.git
   can_common@^0.4.0
   git@github.com:outlandnish/esp32_can.git
 build_flags = 
   -DARDUINO_USB_MODE=1
   -DARDUINO_USB_CDC_ON_BOOT=1
+  -DCONFIG_RMT_ISR_IRAM_SAFE=1
